syntax = "proto3";

package api;

import "types.proto";

// NOTE(stevvooe): Make sure your gopath is appropriately set for this to work
// correctly.
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// Cluster defines the RPC methods for controlling a cluster.
//
// Other options for naming this interface:
//
// 	- "Control", since this controls a swarm cluster
// 	- "User" because it is user facing.
service Cluster {
	rpc UpdateNode(UpdateNodeRequest) returns (UpdateNodeResponse) {}
	rpc ListNodes(ListNodesRequest) returns (ListNodesResponse) {}

	rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
	rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
	rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
	rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}

	rpc CreateJob(CreateJobRequest) returns (CreateJobResponse) {}
	rpc GetJob(GetJobRequest) returns (GetJobResponse) {}
	rpc UpdateJob(UpdateJobRequest) returns (UpdateJobResponse) {}
	rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse) {}
	rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {}

	rpc CreateNetwork(CreateNetworkRequest) returns (CreateNetworkResponse) {};
	rpc GetNetwork(GetNetworkRequest) returns (GetNetworkResponse) {};
	rpc DeleteNetwork(DeleteNetworkRequest) returns (DeleteNetworkResponse) {};
	rpc ListNetworks(ListNetworksRequest) returns (ListNetworksResponse) {};
}

message ListNodesRequest {
}

message ListNodesResponse {
	repeated Node nodes = 1;
}

// UpdateNodeRequest requests an update to the specified node. This may be used
// to request a new state for a node, such as DOWN. Invalid updates will be
// denied and cause an error.
message UpdateNodeRequest {
	string node_id = 1;
	NodeSpec spec = 2;
}

message UpdateNodeResponse {
	Node node = 1;
}

message CreateTaskRequest {
	JobSpec spec = 1;
}

message CreateTaskResponse {
	Task task = 1;
}

message GetTaskRequest {
	string task_id = 1 [(gogoproto.customname) = "TaskID"];
}

message GetTaskResponse {
	Task task = 1;
}

message DeleteTaskRequest {
	string task_id = 1 [(gogoproto.customname) = "TaskID"];
}

message DeleteTaskResponse {
}

message ListTasksRequest {
}

message ListTasksResponse {
	repeated Task tasks = 1;
}

message CreateJobRequest {
	JobSpec spec = 1;
}

message CreateJobResponse {
	Job job = 1;
}

message GetJobRequest {
	string job_id = 1 [(gogoproto.customname) = "JobID"];
}

message GetJobResponse {
	Job job = 1;
}

message UpdateJobRequest {
	string job_id = 1 [(gogoproto.customname) = "JobID"];
	JobSpec spec = 2;
}

message UpdateJobResponse {
}

message DeleteJobRequest {
	string job_id = 1 [(gogoproto.customname) = "JobID"];
}

message DeleteJobResponse {
}

message ListJobsRequest {
}

message ListJobsResponse {
	repeated Job jobs = 1;
}

message CreateNetworkRequest {
	NetworkSpec spec = 1;
}

message CreateNetworkResponse {
	Network network = 1;
}

message GetNetworkRequest {
	string name = 1;
	string network_id = 2 [(gogoproto.customname) = "NetworkID"];
}

message GetNetworkResponse {
	Network network = 1;
}

message DeleteNetworkRequest {
	string name = 1;
	string network_id = 2 [(gogoproto.customname) = "NetworkID"];
}

message DeleteNetworkResponse {}

message ListNetworksRequest {}

message ListNetworksResponse {
	repeated Network network = 1;
}
